--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   background: linear-gradient(45deg, #fff, #18a8d0, #e784e0);
   background-size: 300% 300%;
-  animation: color 12s ease-in-out infinite;
+  animation: color 8s ease-in-out infinite;
 }
 
 /* Gradient animation */
@@ -25,6 +25,48 @@ body {
   100% {
     background-position: 0 50%;
   }
+}
+
+/* Navbar styles */
+.navbar {
+  width: 100%;
+  height: 50px;
+  background: #fff;
+  border-bottom: 1px solid #555;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo-container {
+  margin-left: 80px;
+}
+
+.logo-container span {
+  font-weight: 500;
+  cursor: pointer;
+}
+
+img {
+  height: 2.5rem;
+  width: 4rem;
+}
+
+.links-container {
+  margin-right: 20px;
+  display: flex;
+  width: 300px;
+  justify-content: space-evenly;
+}
+
+.link a {
+  text-decoration: none;
+  color: rgb(14, 34, 14);
+}
+
+.link a:hover {
+  text-decoration: none;
+  color: rgba(14, 34, 14, 0.8);
 }
 
 /* Heading styles */
@@ -195,7 +237,7 @@ form {
 
 .info-icon {
   position: absolute;
-  top: 15px;
+  top: 10px;
   right: 15px;
   background-color: #fff;
   border: none;
@@ -239,51 +281,11 @@ input {
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-input:focus {
-  border-color: #e48f45;
-  box-shadow: #994d1c;
-}
-
-/* Navbar styles */
-.navbar {
-  width: 100%;
-  height: 50px;
-  background: #fff;
-  border-bottom: 1px solid #555;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.logo-container {
-  margin-left: 80px;
-}
-
-.logo-container span {
-  font-weight: 500;
-  cursor: pointer;
-}
-
-img {
-  height: 2.5rem;
-  width: 4rem;
-}
-
-.links-container {
-  margin-right: 20px;
-  display: flex;
-  width: 300px;
-  justify-content: space-evenly;
-}
-
-.link a {
-  text-decoration: none;
-  color: rgb(14, 34, 14);
-}
-
-.link a:hover {
-  text-decoration: none;
-  color: rgba(14, 34, 14, 0.8);
+.form-item__error {
+  height: 16px;
+  font-size: 14px;
+  color: red;
+  margin-top: -8px;
 }
 
 /* Responsive styles */
