--- a/src/Components/loading.css
+++ b/src/Components/loading.css
@@ -1,4 +1,5 @@
 .lds-ring {
+  top: 10px;
   display: inline-block;
   position: relative;
   width: 40px;
@@ -11,10 +12,10 @@
   width: 32px;
   height: 32px;
   margin: 4px;
-  border: 4px solid #fff;
+  border: 4px solid #41d0e6;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fff transparent transparent transparent;
+  border-color: #4fb8f1 transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
