--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ h5 {
 }
 
 /* Button styles */
-.calculate-button {
+/* .calculate-button {
   display: block;
   margin: 0 auto;
   transform: translate(-0%, -0%);
@@ -135,7 +135,7 @@ h5 {
 .calculate-button:hover:after {
   transform-origin: bottom right;
   transform: scale(0);
-}
+} */
 
 /* Container styles */
 .delivery-fee-calculator {
@@ -158,12 +158,12 @@ h5 {
 }
 
 /* Form styles */
-form {
+/* form {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
   align-items: center;
-}
+} */
 
 /* Input styles */
 .input-container {
@@ -174,28 +174,38 @@ form {
 }
 
 /* Other input styles */
-.input-row {
+/* .input-row {
   display: flex;
   flex-direction: row;
   margin-bottom: 8px;
   width: 350px;
-}
+} */
 
-.input-label {
+/* .input-label {
   margin-top: 8.5px;
   left: 10px;
   margin-right: 4px;
   width: 135px;
-}
+} */
 
-.input-field {
+/* .input-field {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 15px;
   width: 160px;
-}
+} */
+
+/* input {
+  padding: 12px;
+  border: 1px solid #083457;
+  border-radius: 8px;
+  font-size: 14px;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  margin-bottom: 15px;
+  width: 200px;
+} */
 
 .input-icon {
   margin-top: 7px;
@@ -235,7 +245,7 @@ form {
 
 .info-icon {
   position: absolute;
-  top: 15px;
+  top: 9px;
   right: 15px;
   background-color: var(--body_background);
   border: none;
@@ -269,22 +279,13 @@ form {
 }
 
 /* Input styles */
-input {
-  padding: 12px;
-  margin-bottom: 16px;
-  border: 1px solid #083457;
-  border-radius: 8px;
-  width: 200px;
-  font-size: 14px;
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
-}
 
-.form-item__error {
+/* .form-item__error {
   height: 16px;
   font-size: 14px;
   color: red;
   margin-top: -8px;
-}
+} */
 
 /* Responsive styles */
 @media screen and (min-width: 1560px) {
